<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:key="replace_minus"
        android:title="@string/preference_replace_minus" />
    <CheckBoxPreference
        android:key="replace_format_phone_numbers"
        android:title="@string/preference_replace_format_phone_numbers" />
    <CheckBoxPreference
        app:key="replace_word_in_upper_case"
        android:title="@string/preference_replace_word_upper_case"/>

    <CheckBoxPreference
        app:key="find_word_in_tag"
        android:title="@string/preference_find_word_in_tag"/>

    <CheckBoxPreference
        app:key="find_links"
        android:title="@string/preference_find_links" />
</PreferenceScreen>